--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <div id="parent">
    
     <div class="container">
-       
+      
         <div id="login" class="form-container">
             <h2 style="text-align: center;margin-bottom: 20px;">AiLAD</h2>
             <form id="login-form" onsubmit="submitForm(event, 'login')">
-                <label for="login-email">Email:</label>
+                <label for="login-email">Email</label>
                 <input type="email" id="login-email" name="login-email" required>
-                <label for="login-password">Password:</label>
+                <label for="login-password">Password</label>
                 <input type="password" id="login-password" name="login-password" required><br>
-
+                <label for="login-Ipaddress">IP Address</label>
+                <input type="text" id="login-Ipaddress" name="login-Ipaddress" required><br>
+                <label for="Useragent">User Agent</label>
+                <input type="text" id="Useragent" name="Useragent" required><br>
                 <div id="message"></div>
                 <button id="login-button" onclick="submitForm(event, 'login')">Login</button>
 
@@ -25,7 +29,7 @@
             <button id="login-show" onclick="showLoginForm()">Show Login</button>
         </div>
     </div>
-
+</div>
     <script src="script.js"></script>
 </body>
 </html>
